--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         }
 
         .hero h1,
+        .hero h2,
         .hero p {
             text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
         }
@@ -205,7 +206,7 @@
             <div class="section hero">
                 <div>
                     <h1>Khoren & Monica<br>Wedding Day</h1>
-                    <p>Join us in love and celebration!</p>
+                    <h2>Join us in love and celebration!</h2>
                     <button onclick="playYouTubeAudio()">Play</button>
                 </div>
             </div>
