Update to react

--- a/index.html
+++ b/index.html
@@ -1,342 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Khoren & Monica Wedding Invitation</title>
-    <style>
-        body {
-            margin: 0;
-            background: #f5f5f5;
-            display: flex;
-            justify-content: center;
-        }
-
-        .page-wrapper {
-            width: 100%;
-            max-width: 700px;
-            /* Tablet size */
-            position: relative;
-            overflow: hidden;
-        }
-
-        .mobile-container {
-            width: 100%;
-            position: relative;
-            z-index: 1;
-        }
-
-        .mobile-container {
-            background-color: transparent;
-        }
-
-        .background-layer {
-            background-color: transparent;
-            /* your other styles */
-        }
-
-        .background-layer {
-            position: fixed;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 100%;
-            max-width: 700px;
-            height: 100vh;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            z-index: -1;
-            opacity: 0;
-            transition: opacity 0.5s ease-in-out;
-        }
-
-        .background-layer.active {
-            opacity: 1;
-        }
-
-        .footer {
-  text-align: center;
-  padding: 15px 10px;
-  font-size: 0.9em;
-  color: white;
-  background-color: transparent; /* or a light color if you want */
-  position: relative; /* so it stays below content */
-  margin-top: 40px; /* space from content */
-  user-select: none;
-}
-
-
-
-        #bg-layer-1 {
-            background-image: url('https://lh3.googleusercontent.com/pw/AP1GczOC5-xcIh-cQd7blKXrBEhgnTAI7mezCJY45bhvYD9UIX5d99vMZdpZtI2ELbNToFPfJnVIlP0__3TOmJkNn4JTOSTI_XeNdCkduaAy9vWn5FZ_2XzVKtv9rwiu6idZaGDQ5Ipi-l2fi-NKMhLPgZnU=w1488-h1984-s-no-gm?authuser=1');
-        }
-
-        #bg-layer-2 {
-            background-image: url('https://lh3.googleusercontent.com/pw/AP1GczOc01C3YcByq7j81XPA2FyOaWA2sSgFVJLsFYxtPtl_rVp--uvghXuaC8ZbFWSHLMvDfg2jezlHcPeuWnSPou41J7k0zlTKeIYOTpORS_rcJ77U6w0bjsmZBgZ_x6IsNRxp-Rto71jz5fWnPeYGkCjh=w1582-h1782-s-no-gm?authuser=1');
-        }
-
-        #bg-layer-3 {
-            background-image: url('https://lh3.googleusercontent.com/pw/AP1GczPuY-61AelR_X-MRdsXiYSaXkIixF4FDAumphYuG2vmxJ9mVan6N-Mg2nfQ1XnjqFW5AFqa-IPw9ukihDr5WS-vwyAzBJ1gqmguzSclsLYsJiKkF7RJyMCRuIwBJ-_rkdkPn0W19f0knVuqbIKK7cn2=w828-h1354-s-no-gm?authuser=1');
-        }
-
-        #bg-layer-4 {
-            background-image: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTBpcTc5NjJwc2syZmp5Zjk4NDUxYXh5eTBuZnZuemZwem5iYXNqZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/hiexP3PVqZzOGx1GRQ/giphy.gif');
-          
-        }
-
-        .section {
-            padding: 20px;
-            text-align: center;
-            min-height: 100vh;
-        }
-
-        .hero {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            color: white;
-        }
-
-        .hero>div {
-            position: relative;
-            top: -200px;
-        }
-
-        .hero h1,
-        .hero h2,
-        .hero p {
-            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
-        }
-
-        .hero h1 {
-            font-size: clamp(1.5em, 5vw, 3em);
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-            margin: 0;
-        }
-
-        .hero p {
-            font-size: clamp(1em, 2.5vw, 1.2em);
-        }
-
-        .hero button {
-            background-color: rgba(0, 0, 255, 0.5);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            margin-top: 10px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .hero button:hover {
-            background-color: #0000cc;
-        }
-
-        .venue-card {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: 0 auto;
-        }
-
-        .countdown {
-            font-size: 1.3em;
-            color: white;
-        }
-
-        .rsvp input,
-        .rsvp button {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0;
-            font-size: 1em;
-            box-sizing: border-box;
-        }
-
-        .love-story {
-            background: rgba(255, 250, 240, 0.9);
-            padding: 20px;
-            min-height: 20vh;
-        }
-
-        /* Optional scale-down on larger screens */
-        @media (min-width: 768px) {
-            .mobile-container {
-                transform: scale(0.9);
-                transform-origin: top center;
-            }
-        }
-
-        /* Hide the iframe */
-        #youtube-player {
-            position: fixed;
-            width: 1px !important;
-            height: 1px !important;
-            left: -10000px;
-            top: 0;
-            display: block !important;
-            opacity: 0;
-            pointer-events: none;
-        }
-    </style>
-</head>
-
-<body>
-    <!-- Fixed background layers -->
-    <div class="page-wrapper">
-        <!-- ✅ Fixed background layers (outside mobile container) -->
-        <div id="bg-layer-1" class="background-layer active"></div>
-        <div id="bg-layer-2" class="background-layer"></div>
-        <div id="bg-layer-3" class="background-layer"></div>
-        <div id="bg-layer-4" class="background-layer"></div>
-        <!-- Content container -->
-        <div class="mobile-container">
-            <div id="bg-layer-1" class="background-layer active"></div>
-            <div id="bg-layer-2" class="background-layer"></div>
-            <div id="bg-layer-3" class="background-layer"></div>
-            <div id="bg-layer-4" class="background-layer"></div>
-
-            <!-- Hidden YouTube player -->
-            <div id="youtube-player"></div>
-
-            <div class="section hero">
-                <div>
-                    <h1>Khoren & Monica<br>Wedding Day</h1>
-                    <h2>Join us in love and celebration!</h2>
-                    <button onclick="playYouTubeAudio()">Play</button>
-                </div>
-            </div>
-
-            <div class="section church-details">
-                <h2>Ceremony at Church</h2>
-                <div class="venue-card">
-                    <h3>Ceremony Details</h3>
-                    <p><strong>Time:</strong> September 27, 2025, 2:30 PM</p>
-                    <p><strong>Location:</strong> Holy Mother of God Cathedral Church</p>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2389.316357333377!2d44.588250465218884!3d40.18206021258736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x406aa39b737e6791%3A0x1d5c8eac4b085e9b!2sHoly%20Mother%20of%20God%20Cathedral%20Church!5e0!3m2!1sen!2sam!4v1751697130740!5m2!1sen!2sam"
-                        width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy">
-                    </iframe>
-                </div>
-            </div>
-
-            <div class="section restaurant-details">
-                <h2>Reception at Restaurant</h2>
-                <div class="venue-card">
-                    <h3>Reception Details</h3>
-                    <p><strong>Time:</strong> September 27, 2025, 5:30 PM</p>
-                    <p><strong>Location:</strong> Hatis Hall, Aramus Village</p>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d810.5429644714161!2d44.671424654275505!3d40.25263185966855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x406a9f9255c52f03%3A0xd0a1a8ced730f8ba!2sHatis%20Hall!5e0!3m2!1sen!2sam!4v1751697551039!5m2!1sen!2sam"
-                        width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy">
-                    </iframe>
-                </div>
-            </div>
-
-            <div class="section countdown">
-                <h2>Countdown to Our Wedding</h2>
-                <p id="countdown-timer">Loading...</p>
-            </div>
-
-
-            <div class="section love-story">
-                <h2>Our Love Story</h2>
-                <p>Write a short story about how you met or your journey together. Add personal touches to make it
-                    special!
-                </p>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>© 2025 Khoren & Monica. All rights reserved.</p>
-          </footer>
-    </div>
-
-      
-    <script>
-        // Load YouTube IFrame API
-        var tag = document.createElement('script');
-        tag.src = "https://www.youtube.com/iframe_api";
-        document.head.appendChild(tag);
-
-        var player;
-
-        function onYouTubeIframeAPIReady() {
-            player = new YT.Player('youtube-player', {
-                height: '1',
-                width: '1',
-                videoId: '9INTqQk9Rv4',
-                playerVars: {
-                    autoplay: 0,
-                    mute: 1,
-                    loop: 1,
-                    playlist: '9INTqQk9Rv4',
-                    controls: 0,
-                    disablekb: 1,
-                    modestbranding: 1,
-                    rel: 0
-                },
-                events: {
-                    'onReady': () => console.log("YouTube player ready")
-                }
-            });
-        }
-
-        function playYouTubeAudio() {
-            if (player && typeof player.playVideo === 'function') {
-                player.playVideo();
-                try { player.unMute(); } catch (e) { }
-                document.querySelector('.hero button').style.display = 'none';
-            } else {
-                alert("Player not ready. Please try again.");
-            }
-        }
-
-        function handleRSVP() {
-            const name = document.getElementById("name").value;
-            const email = document.getElementById("email").value;
-            const msg = document.getElementById("rsvp-message");
-            msg.innerText = name && email ? `Thank you, ${name}! RSVP noted.` : "Please fill both fields.";
-            if (name && email) {
-                document.getElementById("name").value = '';
-                document.getElementById("email").value = '';
-            }
-        }
-
-        function updateCountdown() {
-            const target = new Date("September 27, 2025 00:00:00").getTime();
-            const now = new Date().getTime();
-            const gap = target - now;
-            if (gap <= 0) {
-                document.getElementById("countdown-timer").innerText = "The wedding has arrived!";
-                return;
-            }
-            const days = Math.floor(gap / (1000 * 60 * 60 * 24));
-            const hours = Math.floor((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((gap % (1000 * 60 * 60)) / (1000 * 60));
-            const seconds = Math.floor((gap % (1000 * 60)) / 1000);
-            document.getElementById("countdown-timer").innerText = `Days: ${days}, Hours: ${hours}, Minutes: ${minutes}, Seconds: ${seconds}`;
-        }
-
-        setInterval(updateCountdown, 1000);
-        updateCountdown();
-
-        window.addEventListener('scroll', () => {
-            const scroll = window.scrollY;
-            const h = window.innerHeight;
-            const layers = document.querySelectorAll('.background-layer');
-            layers.forEach(l => l.classList.remove('active'));
-            if (scroll < h) layers[0].classList.add('active');
-            else if (scroll < 2 * h) layers[1].classList.add('active');
-            else if (scroll < 3 * h) layers[2].classList.add('active');
-            else layers[3].classList.add('active');
-        });
-
-        window.dispatchEvent(new Event('scroll'));
-    </script>
-</body>
-
+    <title>Khoren & Monica - Wedding Invitation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
