--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Khoren & Monica - Wedding Invitation</title>
 
     <!-- Open Graph meta tags for link preview -->
     <meta property="og:title" content="Khoren & Monica - Wedding Invitation" />
     <meta property="og:description" content="Join us in celebrating our special day!" />
-    <meta property="og:image" content="https://lh3.googleusercontent.com/pw/AP1GczMoM-jD1alm0cWBjs_D2dY3hNByGv1e05wY3wiGt6z7m1puik0c2bD1-tPsQ9VchLamq6M-ZfFV045ruUN1DxUcbl9UbAGTpRFIl0IVG9f6U-XRjSEKvG5cVK25E57eM1JKiQPH9LKx7pFOBLNp8dfM=w1488-h1984-s-no-gm?authuser=0" />
+    <meta property="og:image" content="%PUBLIC_URL%/background.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:url" content="https://khoren-monica.com" />
     <meta property="og:type" content="website" />
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png" />
-    <link rel="manifest" href="./public/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet" />
