--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <!-- Open Graph meta tags for link preview -->
     <meta property="og:title" content="Khoren & Monica - Wedding Invitation" />
     <meta property="og:description" content="Join us in celebrating our special day!" />
-    <meta property="og:image" content="%PUBLIC_URL%/background.jpg" />
+    <meta property="og:image" content="https://khoren-monica.com/background.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://khoren-monica.com" />
     <meta property="og:type" content="website" />
 
