--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
     <meta property="og:image:width" content="1080" /> <!-- Replace with actual width -->
     <meta property="og:image:height" content="1350" /> <!-- Replace with actual height -->
     <meta property="og:image:alt" content="Khoren and Monica's wedding invitation card" />
-    <!-- Fallback image for Messenger -->
-    <meta property="og:image" content="https://khoren-monica.com/background-padded.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Khoren and Monica's wedding invitation card (padded)" />
     <meta property="og:url" content="https://khoren-monica.com" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Khoren & Monica Wedding" />
@@ -27,6 +21,8 @@
     <!-- Twitter Card tags for Twitter/X compatibility -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://khoren-monica.com/background.jpg" />
+    <meta name="twitter:title" content="Khoren & Monica - Wedding Invitation" />
+    <meta name="twitter:description" content="Join us in celebrating our special day!" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
