--- a/index.html
+++ b/index.html
@@ -9,20 +9,15 @@
     <!-- Open Graph meta tags for link preview -->
     <meta property="og:title" content="Khoren & Monica - Wedding Invitation" />
     <meta property="og:description" content="Join us in celebrating our special day!" />
-    <meta property="og:image" content="https://khoren-monica.com/background.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1080" />
-    <meta property="og:image:height" content="1350" />
-    <meta property="og:image:alt" content="Khoren and Monica's wedding invitation card" />
+    <meta property="og:image" content="https://lh3.googleusercontent.com/pw/AP1GczOC5-xcIh-cQd7blKXrBEhgnTAI7mezCJY45bhvYD9UIX5d99vMZdpZtI2ELbNToFPfJnVIlP0__3TOmJkNn4JTOSTI_XeNdCkduaAy9vWn5FZ_2XzVKtv9rwiu6idZaGDQ5Ipi-l2fi-NKMhLPgZnU=w1488-h1984-s-no-gm?authuser=1" />
     <meta property="og:url" content="https://khoren-monica.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Khoren & Monica Wedding" />
 
-    <!-- Twitter Card tags for Twitter/X compatibility -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://khoren-monica.com/background.jpg" />
-    <meta name="twitter:title" content="Khoren & Monica - Wedding Invitation" />
-    <meta name="twitter:description" content="Join us in celebrating our special day!" />
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
