--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <meta property="og:title" content="Khoren & Monica - Wedding Invitation" />
   <meta property="og:description" content="Join us in celebrating our special day!" />
   <meta property="og:image"
-    content="https://lh3.googleusercontent.com/pw/AP1GczMoM-jD1alm0cWBjs_D2dY3hNByGv1e05wY3wiGt6z7m1puik0c2bD1-tPsQ9VchLamq6M-ZfFV045ruUN1DxUcbl9UbAGTpRFIl0IVG9f6U-XRjSEKvG5cVK25E57eM1JKiQPH9LKx7pFOBLNp8dfM=w1488-h1984-s-no-gm?authuser=0" />
+    content="https://khoren-monica.com/background.jpg" />
   <meta property="og:image:width" content="1488" />
   <meta property="og:image:height" content="1984" />
+  <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:url" content="https://khoren-monica.com" />
-  <meta property="og:type" content="website" />
+  <!-- <meta property="og:type" content="website" /> -->
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
