--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <!-- Open Graph meta tags for link preview -->
   <meta property="og:title" content="Khoren & Monica - Wedding Invitation" />
   <meta property="og:description" content="Join us in celebrating our special day!" />
-  <meta property="og:image"
-    content="https://khoren-monica.com/background.jpg" />
-  <meta property="og:image:width" content="1488" />
-  <meta property="og:image:height" content="1984" />
+  <meta property="og:image" content="https://khoren-monica.com/background.jpg" />
+  <meta property="og:image:width" content="1080" />
+  <meta property="og:image:height" content="1440" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:url" content="https://khoren-monica.com" />
-  <!-- <meta property="og:type" content="website" /> -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Khoren & Monica Wedding" />
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
