--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Open Graph meta tags for link preview -->
   <meta property="og:title" content="Khoren & Monica - Wedding Invitation" />
   <meta property="og:description" content="Join us in celebrating our special day!" />
-  <meta property="og:image" content="https://khoren-monica.com/background.jpg" />
+  <meta property="og:image" content="https://khoren-monica.com/background2.jpg" />
   <meta property="og:image:width" content="1080" />
   <meta property="og:image:height" content="1440" />
   <meta property="og:image:type" content="image/jpeg" />
